--- a/home.styl
+++ b/home.styl
@@ -4,18 +4,11 @@ body
   height 100%;
 
 body
+  display: flex
   margin 0;
   padding 0;
   font-family Helvetica, Arial, sans-serif;
 
-.wrapper
-  display: flex
-  height: 100%
-
-.chart
-  margin: auto
-  box-shadow 0 0 5px rgba(0, 0, 0, .2)
-  
 perspective = false
 duration = 1.2s
 
@@ -23,6 +16,9 @@ svg
   animation svg-animation duration ease-in-out
   transform scale(1)
   perspective 500px
+  box-shadow 0 0 5px rgba(0, 0, 0, .2)
+  overflow visible
+  margin: auto
   box-shadow 0 0 5px rgba(0, 0, 0, .2)
 
 path
@@ -37,7 +33,6 @@ path
     animation path-animation-3d local-duration mode delay forwards
   else
     animation path-animation-2d local-duration mode delay forwards
-
 
 
 @keyframes svg-animation
