--- a/css/home.styl
+++ b/css/home.styl
@@ -19,11 +19,10 @@ svg
   box-shadow 0 0 5px rgba(0, 0, 0, .2)
   overflow visible
   margin: auto
-  box-shadow 0 0 5px rgba(0, 0, 0, .2)
 
 path
-  delay = duration
   local-duration = .9s
+  delay = 1.05s
   mode = perspective ? ease-out : linear
   opacity 0
   transform-origin 50% 0%
