--- a/css/home.styl
+++ b/css/home.styl
@@ -27,11 +27,9 @@ path
   opacity 0
   transform-origin 50% 0%
   transform scaleX(0)
+  animation path-animation local-duration mode delay forwards
   if perspective
     transform rotate(20deg)
-    animation path-animation-3d local-duration mode delay forwards
-  else
-    animation path-animation-2d local-duration mode delay forwards
 
 
 @keyframes svg-animation
@@ -43,21 +41,21 @@ path
     transform scale(1)
 
 
-@keyframes path-animation-3d
-  from
-    opacity 0
-    transform scaleX(0) rotate(20deg)
-  80%
-    opacity: .8
-    transform scaleX(0.8) rotate(-3deg)
-  to
-    opacity 1
-    transform scaleX(1) rotate(0deg)
-
-@keyframes path-animation-2d
-  from
-    opacity 0
-    transform scaleX(0)
-  to
-    opacity 1
-    transform scaleX(1)
+@keyframes path-animation
+  if perspective
+    from
+      opacity 0
+      transform scaleX(0) rotate(20deg)
+    80%
+      opacity: .8
+      transform scaleX(0.8) rotate(-3deg)
+    to
+      opacity 1
+      transform scaleX(1) rotate(0deg)
+  else
+    from
+      opacity 0
+      transform scaleX(0)
+    to
+      opacity 1
+      transform scaleX(1)
