--- a/css/home.styl
+++ b/css/home.styl
@@ -20,19 +20,24 @@ svg
   overflow visible
   margin: auto
 
+for i in (1..35)
+  path:nth-child({i})
+    animation-delay (i / 13)s
+
 path
   local-duration = .9s
   delay = 1.05s
   mode = perspective ? ease-out : linear
-  opacity 0
-  transform-origin 50% 0%
-  transform scaleX(0)
-  if perspective
-    transform rotate(20deg)
-    animation path-animation-3d local-duration mode delay forwards
-  else
-    animation path-animation-2d local-duration mode delay forwards
+  transform-origin 100% 100%
+  transform scaleY(0)
+  animation path-appearance local-duration mode delay forwards
 
+
+@keyframes path-appearance
+  from
+    transform scaleY(0)
+  to
+    transform scaleY(1)
 
 @keyframes svg-animation
   from
