--- a/css/home.styl
+++ b/css/home.styl
@@ -20,23 +20,23 @@ svg
   overflow visible
   margin: auto
 
-
-for i in (1..35)
-  path:nth-child({i})
-    animation-delay (i / 13)s
-
 path
   local-duration = .9s
   delay = 1.05s
   mode = perspective ? ease-out : linear
   transform-origin 100% 100%
   transform scaleY(0)
-  animation path-appearance local-duration mode delay forwards
+  animation path-appearance local-duration ease-out delay forwards
 
+for i in (1..35)
+  path:nth-child({i})
+    animation-delay (i / 13)s
 
 @keyframes path-appearance
   from
     transform scaleY(0)
+  65%
+    transform scaleY(1.04)
   to
     transform scaleY(1)
 
