--- a/css/home.css
+++ b/css/home.css
@@ -10,6 +10,10 @@ body {
   display: flex;
   margin: 0;
   padding: 0;
+  background-color: rgba(0,12,12,0.4);
+  background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
+  background-image: -webkit-linear-gradient(0deg, rgba(255,255,255,0.07) 50%, transparent 50%), -webkit-linear-gradient(0deg, rgba(255,255,255,0.13) 50%, transparent 50%), -webkit-linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.17) 50%), -webkit-linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.19) 50%);
+  background-image: linear-gradient(90deg, rgba(255,255,255,0.07) 50%, transparent 50%), linear-gradient(90deg, rgba(255,255,255,0.13) 50%, transparent 50%), linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.17) 50%), linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.19) 50%);
   font-family: Helvetica, Arial, sans-serif;
 }
 svg {
@@ -20,7 +24,7 @@ svg {
           transform: scale(1);
   -webkit-perspective: 500px;
           perspective: 500px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+  box-shadow: 0 0 5px rgba(0,0,0,0.25);
   overflow: visible;
   margin: auto;
 }
