--- a/css/home.styl
+++ b/css/home.styl
@@ -7,13 +7,20 @@ body
   display flex
   margin 0;
   padding 0;
+  background-color: rgba(0, 12, 12, .4);
+  background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
+  background-image:
+    linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
+    linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
+    linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
+    linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
   font-family Helvetica, Arial, sans-serif;
 
 svg
   animation svg-appearance 1.2s ease-in-out
   transform scale(1)
   perspective 500px
-  box-shadow 0 0 5px rgba(0, 0, 0, .2)
+  box-shadow 0 0 5px rgba(0, 0, 0, .25)
   overflow visible
   margin auto
 
