--- a/css/home.css
+++ b/css/home.css
@@ -24,7 +24,7 @@ svg {
           transform: scale(1);
   -webkit-perspective: 500px;
           perspective: 500px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.25);
+  box-shadow: 0 0 15px 10px rgba(0,0,0,0.15);
   overflow: visible;
   margin: auto;
 }
