--- a/css/home.styl
+++ b/css/home.styl
@@ -20,7 +20,7 @@ svg
   animation svg-appearance 1.2s ease-in-out
   transform scale(1)
   perspective 500px
-  box-shadow 0 0 5px rgba(0, 0, 0, .25)
+  box-shadow 0 0 15px 10px rgba(0, 0, 0, .15)
   overflow visible
   margin auto
 
