--- a/css/home.css
+++ b/css/home.css
@@ -8,12 +8,14 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-animation: body-animation 1s linear;
+          animation: body-animation 1s linear;
   margin: 0;
   padding: 0;
-  background-color: rgba(0,40,30,0.4);
+  background-color: rgba(0,0,0,0.24);
   background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
-  background-image: -webkit-linear-gradient(0deg, rgba(255,255,255,0.07) 50%, transparent 50%), -webkit-linear-gradient(0deg, rgba(255,255,255,0.13) 50%, transparent 50%), -webkit-linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.17) 50%), -webkit-linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.19) 50%);
-  background-image: linear-gradient(90deg, rgba(255,255,255,0.07) 50%, transparent 50%), linear-gradient(90deg, rgba(255,255,255,0.13) 50%, transparent 50%), linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.17) 50%), linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.19) 50%);
+  background-image: -webkit-linear-gradient(90deg, rgba(255,255,255,0.07) 50%, transparent 50%), -webkit-linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.1) 50%), -webkit-linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.17) 50%), -webkit-linear-gradient(90deg, transparent 50%, rgba(255,255,255,0.19) 50%);
+  background-image: linear-gradient(0deg, rgba(255,255,255,0.07) 50%, transparent 50%), linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.1) 50%), linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.17) 50%), linear-gradient(0deg, transparent 50%, rgba(255,255,255,0.19) 50%);
   font-family: Helvetica, Arial, sans-serif;
 }
 svg {
@@ -27,6 +29,14 @@ svg {
   box-shadow: 0 0 15px 6px rgba(0,0,0,0.15);
   overflow: visible;
   margin: auto;
+  cursor: pointer;
+  -webkit-transition: all 0.3s linear;
+          transition: all 0.3s linear;
+}
+svg:hover {
+  -webkit-transform: scale(1.007);
+      -ms-transform: scale(1.007);
+          transform: scale(1.007);
 }
 path {
   -webkit-transform-origin: 100% 100%;
