--- a/css/home.styl
+++ b/css/home.styl
@@ -5,15 +5,16 @@ body
 
 body
   display flex
+  animation body-animation 1s linear
   margin 0;
   padding 0;
-  background-color: rgba(0, 40, 30, .4);
+  background-color: rgba(0, 0, 0, .24);
   background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
   background-image:
-    linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
-    linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
-    linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
-    linear-gradient(90deg, transparent 50%, rgba(255,255,255,.19) 50%);
+    linear-gradient(0deg, rgba(255,255,255,.07) 50%, transparent 50%),
+    linear-gradient(0deg, transparent 50%, rgba(255,255,255,.1) 50%),
+    linear-gradient(0deg, transparent 50%, rgba(255,255,255,.17) 50%),
+    linear-gradient(0deg, transparent 50%, rgba(255,255,255,.19) 50%);
   font-family Helvetica, Arial, sans-serif;
 
 svg
@@ -23,6 +24,10 @@ svg
   box-shadow 0 0 15px 6px rgba(0, 0, 0, .15)
   overflow visible
   margin auto
+  cursor: pointer
+  transition all .3s linear
+  &:hover
+    transform scale(1.007)
 
 path
   transform-origin 100% 100%
