--- a/css/home.styl
+++ b/css/home.styl
@@ -1,3 +1,4 @@
+points = 36
 html,
 body
   width 100%;
@@ -9,12 +10,6 @@ body
   margin 0;
   padding 0;
   background-color: rgba(0, 0, 0, .24);
-  background-size: 13px 13px, 29px 29px, 37px 37px, 53px 53px;
-  background-image:
-    linear-gradient(0deg, rgba(255,255,255,.07) 50%, transparent 50%),
-    linear-gradient(0deg, transparent 50%, rgba(255,255,255,.1) 50%),
-    linear-gradient(0deg, transparent 50%, rgba(255,255,255,.17) 50%),
-    linear-gradient(0deg, transparent 50%, rgba(255,255,255,.19) 50%);
   font-family Helvetica, Arial, sans-serif;
 
 svg
@@ -23,11 +18,9 @@ svg
   perspective 500px
   box-shadow 0 0 15px 6px rgba(0, 0, 0, .15)
   overflow visible
+  padding: 1px 3px
+  background: rgba(255, 255, 255, .6)
   margin auto
-  cursor: pointer
-  transition all .3s linear
-  &:hover
-    transform scale(1.007)
 
 path
   transform-origin 100% 100%
@@ -35,9 +28,9 @@ path
   opacity 0
   animation path-appearance .7s ease-out forwards
 
-for i in (1..35)
+for i in (1..points)
   path:nth-child({i})
-    animation-delay (i / 13)s
+    animation-delay (i / 22)s
 
 @keyframes path-appearance
   from
